--- a/ch01-context/ex2.html
+++ b/ch01-context/ex2.html
@@ -22,6 +22,16 @@
     <div>
         <h2>모바일 앱 개발</h2>
         <p><em>iOS 및 Android</em> 앱을 개발하여 사용자 친화적인 <strong>UI/UX 디자인</strong>을 제공합니다.</p>
+        <p>비즈니스 요구에 맞춘 최적화된 모바일 솔루션을 구축합니다.</p>
+        <p>지원 플랫폼: <strong>React Native &middot; Flutter &middot; Swift &middot; Kotlin</strong></p>
+        <p><strong>가격:</strong> <del>&#8361;3,500,000</del> <strong>&#8361;3,450,000</strong></p>
+    </div>
+    <hr>
+    <div>
+        <h2>클라우드 서비스</h2>
+        <p>안전한 <strong>클라우드 기반 인프라</strong>를 구축하여 데이터를 효율적으로 관리합니다.</p>
+        <p>보안 및 확장성을 고려한 <em>데이터 관리 솔루션</em>을 제공합니다.</p>
+        <p>제공 서비스: <strong>AWS &middot; Google Cloud &middot; Microsoft Azure</strong></p>
     </div>
 </body>
 </html>
