문제 수정 및 추가

--- a/ch01-context/stydy2.html
+++ b/ch01-context/stydy2.html
@@ -20,6 +20,7 @@
         <p>이산화탄소의 화학식은 C0 <sub><mark>2</mark></sub> 여기서 sub태그는 <mark>아래첨자</mark> 꾸밈태크</p>
         <p>x <sup><mark>2</mark></sup>=9 인 방정식의 해는 3이다. 여기서 sup태그는 <mark>위첨자</mark> 꾸밈태그</p>
         <p><mark>mark는 형광펜처리할때 쓰는 태그</mark></p>
+        <p>del은 <del>글씨 중간에 선을 긋는</del> 태그</p>
     </div>
     <hr>
     <div>
