링크 태그 공부

--- a/ch01-context/study1.html
+++ b/ch01-context/study1.html
@@ -6,6 +6,10 @@
     <title>웹표준 - 맥락</title>
 </head>
 <body>
+    <a href="../index.html">홈 화면으로 이동</a>
+    <br>
+    <a href="../ch02-link/study1.html">ch02-link - study1페이지로 이동하기</a>
+
     <h1>큰 제목</h1>
     <h2>두번째로 큰 제목</h2>
     <h3>세번째 제목</h3>
