--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     환영합니다!<br>
     김민지의 홈페이지입니다!<br>
-    br은 줄바꿈을 하는 단일태그입니다!
+    <!--주석태그-->
+    <!--br은 줄바꿈을 하는 단일태그-->
+    <a href="./ch01-context/study1.html">ch01-context - study1페이지로 이동하기</a>
+    <br>
+    <a href="./ch02-link/study1.html">ch02-link - study1페이지로 이동하기</a>
 </body>
 </html>
