--- a/ch04-list/study1.html
+++ b/ch04-list/study1.html
@@ -18,7 +18,8 @@
     <hr>
 
     <p>각 항목들마다 순서의 흐름이 없다면 '비순서형 리스트'를 사용한다.</p>
-    <ul>unorder list -> 메뉴
+
+    <ul>unorder list
         <li>러닝</li>
         <li>복싱</li>
         <li>낚시</li>
@@ -27,6 +28,7 @@
     <hr>
 
     <p>정의하는 대상에 설명 맥락을 만드는 '정의형 리스트'를 쓰기도 한다</p>
+
     <dl>
         <dt>정의할 대상</dt>
         <dd>정의할 대상에 대한 설명, dl맥락</dd>
@@ -34,6 +36,15 @@
         <dd>정의할 대상에 대한 설명</dd>
         <dt>정의할 대상</dt>
         <dd>정의할 대상에 대한 설명</dd>
+    </dl>
+
+    <dl>예시문장
+        <dt>HTML</dt>
+        <dd>웹 문서의 구조를 정의하는 마크업 언어</dd>
+        <dt>CSS</dt>
+        <dd>웹 문서의 디자인과 스타일을 지정하는 언어</dd>
+        <dt>JavaScript</dt>
+        <dd>웹 문서에 동적인 기능을 추가하는 언어</dd>
     </dl>
 
     <hr>
