--- a/ch05-table/study1.html
+++ b/ch05-table/study1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>표(테이블) 태그</title>
+    <title>표(table) 태그</title>
 </head>
 <body>
     <table border="1">
