--- a/ch08-css-basic/study4.html
+++ b/ch08-css-basic/study4.html
@@ -16,13 +16,20 @@
         css에서 p.c{font-size:60px; color:#000;}는 p태그 중에서 클래스 c를 가지고 있는 것만 효과를 부여한다는 의미<br>
         css에서 .c는 클래스를 c로 부여받은 모든 애들에게 효과를 주겠다는 의미<br>
         css에서 p.a.b는 p태그 중에서 클래스가 a와 b를 모두 가지고 있는 애들에게 효과를 주겠다는 의미<br>
-        css에서 맨 앞자리에 있는 (. 또는 # 앞에 올 수 있는) 것은 <b>html태그명</b>뿐이다. -> ex) h2.c{} /// p.b{} ///li#a 등등
+        css에서 맨 앞자리에 있는 (. 또는 # 앞에 올 수 있는) 것은 <b>html태그명</b>뿐이다. -> 예를들어, h2.c{} /// p.b{} ///li#a 등등<br>
+        아이디면 단수취급(하나로 지정), 클래스면 복수취급(조건에 충족되는 모든 태그)
     </p>
     <h2>title</h2>
     <div class="box">
-        <h2>.box h2{backgruond-color: gray;} -> class명이 box인 태그안에 있는 h2들에게 배경색을 회색으로 주겠다는 의미</h2>
-        <h2>div.box h2{backgruond-color: gray;} -> div의 클래스가 box인 태그 안에 있는 h2들에게 배경색을 회색으로 주겠다는 의미</h2>
-        <h2>section.box h2{backgruond-color: gray;} -> section의 클래스가 box인 태그 안에 있는 h2들에게 배경색을 회색으로 주겠다는 의미 </h2>
+        <section>
+            <h2>.box h2{backgruond-color: gray;} -> class명이 box인 태그 안에 있는(포함되어있는) h2들에게 배경색을 회색으로 주겠다는 의미</h2>
+            <h2>div.box h2{backgruond-color: gray;} -> div의 클래스가 box인 태그 안에 있는(포함되어있는) h2들에게 배경색을 회색으로 주겠다는 의미</h2>
+            <h2>section.box h2{backgruond-color: gray;} -> section의 클래스가 box인 태그 안에 있는(포함되어있는) h2들에게 배경색을 회색으로 주겠다는 의미 </h2>
+        </section>
+    </div>
+    <div class="box">
+        <h2>위의 상황처럼 div안에 section이 있고, 그 안에 h2가 있다고 해도 div.box h2라는 상황에서 css가 반영이 된다. 왜냐, 띄어쓰기는 안에있는(포함된)이라는 의미이기 때문에 손자태그여도 안에 존재하기 때문에 적용이 된다. 그러나 >(꺽새)의 경우 "자식태그"의 경우에만 적용이 되는 것이기 때문에 div.box>h2의 경우에는 h2에 css가 반영되지 않는다. 만약 div.box >h2 or div.box > h2의 경우에도 똑같이 꺽새로만 반영을 해야함. 왜냐, 이런 경우에서 띄어쓰기 한 경우에는 단지 시각적으로 구분해서 보기 편하라고 한 것이기 때문</h2>
+        <h2>따라서 첫번째 상황이 자손선택자라고 하며, 두번째 상황을 자식선택자라고 한다.</h2>
     </div>
 </body>
 </html>
