집에서 html복습

--- a/ch08-css-basic/study3.html
+++ b/ch08-css-basic/study3.html
@@ -9,9 +9,53 @@
 <body>
     <h2>외부 스타일 시트 방식</h2>
     <p>html파일의 외부에 따로 css파일을 만들어서 연결 -> 보통 이 방식을 사용.</p>
-    <h2>title</h2>
-    <h2>title</h2>
-    <h2>title</h2>
-    <h2>title</h2>
+
+    <h1>집에서 태그 공부</h1>
+    <h2>제목태그인 h1~h6태그는 맥락에 맞게</h2>
+    <p>p태그는 설명태그</p>
+    <address>주소태그, 전화번호 이메일 등</address>
+    <blockquote>인용구태그</blockquote>
+    <div>영역태그</div>
+    <section>영역태그, 더 큰 범위</section>
+    <p>hr은 구분선, br은 줄바꿈</p>
+    <hr>
+    <h2>강조태그, 꾸밈태그</h2>
+    <p>strong태그, b태그, em태그, i태그</p>
+    <p>mark태그는 <mark>하이라이트</mark>, 아래첨자 sub태그와 윗첨자 sup태그</p>
+    <p>이외에 이스케이핑문자(특수문자)도 존재, &middot; &엠퍼센드middot세미콜론; 등이 있음~</p>
+
+    <h2>링크연결</h2>
+    <a href="https://www.naver.com/">네이버 바로열기</a>
+    <p>http://~처럼 인터넷상 이미 정해져있는 경로를 절대경로라 함. 기본적으로 a태그를 사용하면 target="_self"이 기본값으로 설정되어있으며,이는 링크를 눌렀을때 현재탭이 소실되면서 경로설정된 창이 나온다.</p>
+    <a href="https://www.daum.net/" target="_blank">다음 새창열기</a>
+    <p>주소 뒤에 한칸 띄어쓰기를 한 후 target="-vblank"를 입력하면 현재 창이 소실되지 않고, 새로운 창이 열리면서 경로설정된 창이 하나 더 나오게된다.</p>
+    <a href="#" title="마우스 올리면 안내문구 표시됨">a태그에서 #은 임의링크</a>
+    <p>head태그에 link로 css를 연결해놨는데 저게 상대경로</p>
+    <a href="tel:01012345678">010-1234-5678 전화연결</a>
+    <br>
+    <a href="mailto:email@naver.com">email@naver.com 이메일연결</a>
+
+    <h2>이미지태그, 비디오태그</h2>
+    <img src="#" alt="src는 상대경로, alt는 이미지에 대한 직관적인 설명">
+    <p>비디오태그는 강사님 정리해준 노션 확인^~^</p>
+
+    <h2>리스트태그</h2>
+    <ol>
+        <li>ol태그</li>
+        <li>순서형태그. 순서의 흐름 존재</li>
+    </ol>
+    <ul>
+        <li>ul태그</li>
+        <li>비순서형태그. 순서 흐름은 없지만, 메뉴 구성할때 사용</li>
+    </ul>
+    <dl>
+        <dt>dl태그</dt>
+        <dd>정의형리스트태그</dd>
+        <dt>dt태그</dt>
+        <dd>dl태그의 자식태그로, Description Term의 약자, 이름을 의미</dd>
+        <dt>dd태그</dt>
+        <dd>dl태그의 자식태그로, Description Details의 약자, 이름에 대한 설명을 의미</dd>
+    </dl>
+    <p>table이랑 form태그, division은 노션 확인~!!</p>
 </body>
 </html>
