--- a/ch10-font/study1.html
+++ b/ch10-font/study1.html
@@ -17,5 +17,32 @@
     <p class="ex1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque laboriosam eum excepturi hic, praesentium adipisci tempore iure consequuntur officia consequatur eveniet delectus blanditiis sunt ipsum, dolor sequi nesciunt laborum minima.</p>
 
     <p class="ex2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sit nobis earum ea, cum veritatis ipsum, nam adipisci ipsam quaerat mollitia recusandae illum tempora iusto quia laboriosam debitis! Odit, explicabo!</p>
+
+    <p class="ex3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed omnis inventore impedit vitae nesciunt tenetur est, facere eveniet minus dicta quidem sit incidunt voluptate expedita velit quae autem. Delectus, sed.</p>
+
+    <address>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eos totam repellendus quo voluptatem ipsum recusandae minus dolor veniam eligendi ea in, quia ut, sunt voluptatibus, sint perferendis earum iste!</address>
+    
+    <p class="ex4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis veniam dolor ad quo? Eligendi nostrum quod quasi impedit fuga. Doloremque illo eum ut beatae possimus deleniti sit unde, iste nam?</p>
+
+    <p class="ex5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae deleniti sunt maxime, alias sed sequi facere nemo placeat consectetur temporibus ad ea voluptates cupiditate magni rerum similique voluptatem, rem eaque!</p>
+
+    <p class="ex6">
+        Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Dicta harum corporis iste vitae rerum ipsum omnis totam ipsa magnam nulla laborum labore possimus alias quod accusamus, delectus placeat
+        vel consequatur!
+    </p>
+
+    <p class="ex7">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus eligendi vitae dolores veniam dolore. Ex explicabo provident accusamus natus eius quod distinctio assumenda odit sapiente, perspiciatis, mollitia, culpa veniam laudantium?</p>
+
+    <p class="ex8">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni aliquid modi quam mollitia pariatur, autem error, sapiente vero, nihil quibusdam facilis. Perspiciatis eum, numquam aliquam quidem consequuntur asperiores earum id?</p>
+
+    <a href="#">a태그의 underline</a>
+
+    <p class="ex9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil adipisci facilis explicabo voluptatibus repellat quas perferendis at. Veritatis pariatur dolor ducimus a ipsum vitae laudantium debitis officia, minima omnis sequi.</p>
+
+    <p class="ex10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam recusandae dolore tempora, quia ab placeat officia soluta ducimus unde. Cumque non cupiditate inventore corporis. Architecto totam enim voluptatum nisi ut?</p>
+
+    <p class="ex11"><b>Lorem ipsum</b> dolor sit, amet consectetur adipisicing elit. Sapiente incidunt mollitia repudiandae ratione! Debitis ipsum aspernatur quo, ab repudiandae enim asperiores veritatis nemo maiores libero sunt, rerum dolores mollitia quas?</p>
+
 </body>
 </html>
